--- a/admin/backend/mail/email-template.html
+++ b/admin/backend/mail/email-template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Reset Your Password</title>
@@ -9,6 +10,7 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
         }
+
         .container {
             width: 100%;
             max-width: 600px;
@@ -16,22 +18,29 @@
             padding: 20px;
             background-color: #f4f4f4;
         }
+
         .header {
             background-color: #333;
             color: #fff;
             padding: 10px 0;
             text-align: center;
         }
+
         .content {
             margin: 20px 0;
         }
+
         .footer {
             text-align: center;
             font-size: 12px;
             color: #999;
         }
+        .text-center{
+            text-align: center;
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="header">
@@ -39,9 +48,8 @@
         </div>
         <div class="content">
             <p>Dear User,</p>
-            <p>You have requested to reset your password. Please click the link below to reset your password:</p>
-            <p><a href="{{reset_link}}">Reset Password</a></p>
-            <p>If you can't click the button, Copy Paste the Url in Browser: {{reset_link}}</p>
+            <p>You have requested to reset your password. Heres the Code to Reset:</p>
+            <p class="text-center">{{reset_link}}</p>
             <hr>
             <p>If you did not request a password reset, please ignore this email.</p>
         </div>
@@ -50,4 +58,5 @@
         </div>
     </div>
 </body>
+
 </html>
